# data-ex-vis

./: HowToSubmitAnAssignment.md  README.md
Assignments/Image_Exploration/: Ex-2B-AnalysingVideoStream.ipynb  Readme.md  environment.yml  requirements.txt
Assignments/InteractiveVisualizations/: Tasks.md
Assignments/NLP/: requirements.txt
Assignments/Networks/: Readme.md  env_variables  requirements.txt
Lectures/Apps_Chatbots/: Readme.md  life-expectancy.csv  pyproject.toml
Lectures/Apps_Chatbots/01-Streamlit_Image_modification/: howtorun_streamlit  streamlit_example.py
Lectures/Apps_Chatbots/02-Streamlit_memory_usage/: basic_memory.py  howtorun_streamlit
Lectures/Apps_Chatbots/03-Streamlit_chat_pandas_dataframe_sketch/: chat_pandas_df.py
Lectures/Apps_Chatbots/04-Streamlit-Langchain_agent/: minimal_agent.py
Lectures/Apps_Chatbots/05-Chainlit_examples/: first.py  humanintheloop.py
Lectures/Apps_Chatbots/Chainlit_examples/: howtorun_chainlit
Lectures/Datacleaning-reproducibility/: 01-DataGoesMissing.ipynb  02-MissingData-BiologicalDB.ipynb  Readme.md  Sketch-text2pandas.ipynb  Tools_for_reproducible_workflows.ipynb  example.Snakefile  links  requirements.txt
Lectures/Image_Exploration/: Readme.md  env_variables  requirements.txt
Lectures/Interactive_Visualization/: 01-Technology_FurtherReadings.ipynb  02-Tutorial-interactive-plot.ipynb  03-Plotly_dash_server_example.ipynb  05-Dashboard.ipynb  Readme.md  env_variables  requirements.txt
Lectures/Introduction/: Readme.md
Lectures/LargeData/: .env
Lectures/NLP/: Readme.md  Twitter-nlp.ipynb  (+3 more)
(+24 files in other folders)
